--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "mysql2": "^3.11.3",
+    "nest-winston": "^1.9.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "winston": "^3.15.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
